# video-dl

./: .gitignore  LICENSE  LICENSE.txt  Linux-video-dl.spec  MACOS-video-dl.py  Makefile  README.fr.md  README.md  Windows-video-dl.spec  app.py  bs3.py  deps.py  ffmpeg_handler.py  gen_new_version.py  gui.py  gui_config.py  gui_flet.py  gui_options.py  hwaccel_handler.py  icon.icns  icon_base64.py  lang.py  main.py  main_android.py  pyproject.toml  release.sh  requirements.in  requirements.txt  root.json  setup.py  sys_utils.py  sys_vars.py  test_mobile_ui.py  updater.py  util.py  version.py  videodl-config.toml  videodl_exceptions.py  videodl_logger.py  ytdlp_handler.py
.github/: renovate.json
.github/workflows/: auto-release.yml  black.yml  build.yml  canary.yml  ci.yml  flake8.yml  linting.yml  main.yml
ci_cd/: tox.ini
components_handlers/: ffmpeg_handler.py  gen_new_version.py  hwaccel_handler.py  ytdlp_handler.py
config/: config.ini
core/: aria2c_progress.py  callbacks.py  config_types.py  download.py  encode.py  error_report.py  exceptions.py  ffmpeg_progress.py  ffmpegfd_progress.py  hwaccel.py  progress.py  vk_extractor.py  ydl_opts.py  ytdlp_patch.py
docs/: PRIVACY_POLICY.md
docs/plans/: 2026-02-26-error-handling-design.md
gui/: app.py  config.py  options.py
i18n/: lang.py
installer/: video-dl.iss
resources/: Video_dl.ps1  detect_hardware.bat  detect_hardware_linux.sh  detect_hardware_unix.sh
ressources/: Detect_hardware.ps1  H264PerformanceTest32.bat  H264PerformanceTest64.bat  Resolutions.bat  detect_hardware_linux.sh  detect_hardware_unix.sh
runtime/: __init__.py  android.py  base.py  desktop.py
scripts/: install-update binaries.bat  install_update_binaries.bat  video-dl-unix.sh  video-dl.bat  video_dl.bat  video_dl.sh
specs/: Linux-video-dl.spec  Windows-video-dl.spec  macOS-video-dl.spec  macos-entitlements.plist
tests/: conftest.py  test_aria2_install.py  test_aria2c_progress.py  test_config.py  test_deps.py  test_download.py  test_encode.py  test_end_to_end.py  test_error_report.py  test_exceptions.py  test_ffmpeg_install.py  test_ffmpeg_progress.py  test_ffmpegfd_progress.py  test_gui_builds.py  test_gui_fields.py  test_hwaccel.py  test_lang.py  test_language_refresh.py  test_options.py  test_parse_util.py  test_progress.py  test_sys_architecture.py  test_sys_utils.py  test_vk_extractor.py  test_windows_loader_dialogs.py  test_ydl_opts.py  test_ytdlp_patch.py
tests/updater/: test_updater.py
tools/: ci_sign.py  gen_new_version.py  notarize.sh  repo_init.py
updater/: bs3.py  client.py  crypto_util.py  gen_new_version.py  updater.py
utils/: aria2_install.py  crypto_util.py  ffmpeg_install.py  gui_utils.py  install_ffmpeg  install_ffmpeg.py  parse_util.py  quickjs_install.py  sponsor_block_dict.py  sys_architecture.py  sys_utils.py
