[project]
name = "video-dl"
# Single sourced from version.py, so a release cannot bump one copy and miss another.
dynamic = ["version"]
description = "A Flet-based GUI for yt-dlp with hardware-accelerated encoding"
authors = [{ name = "Rogelio MENDOZA" }]
requires-python = ">=3.12"
dependencies = [
    # Pinned exactly, and deliberately NOT taken to 0.83 or later.
    #
    # 0.83 took the Flutter runtime out of the flet-desktop package and put it on
    # GitHub Releases. The frozen binary then drops from 76 MB to 36 MB, and on first
    # launch it downloads 95 MB from GitHub with urlretrieve, with no checksum, into
    # ~/.flet, and runs it. An Authenticode-signed exe would be fetching and executing
    # an unsigned binary, and a user with no network would have no app at all.
    #
    # Nothing in 0.82 to 0.85 is used here: Router, use_dialog, Auth0, Maps,
    # AudioRecorder, ads, CodeEditor. The code migration is three lines (ft.padding.only
    # is gone, ft.Padding replaces it), verified by running the app on 0.85.3, so the
    # code is not what holds this back. Revisit when the runtime can be bundled again.
    "flet==0.81.0",
    "quantiphy",
    "tomlkit",
    # Upstream yt-dlp, not a fork. ffmpeg progress reporting, the one thing the
    # fork existed for, is done at runtime in core/ytdlp_patch.py instead.
    #
    # [default] pulls yt-dlp's own recommended runtime deps (mutagen for audio
    # tagging, websockets, pycryptodomex, brotli, certifi, yt-dlp-ejs). Without
    # it the shipped yt-dlp silently loses those code paths.
    #
    # Pinned exactly: yt-dlp is frozen into the binary at build time anyway, so a
    # floating spec buys users no fixes, it only makes two builds of the same tag
    # differ. Bump it deliberately, and often: a stale yt-dlp is a broken YouTube.
    "yt-dlp[default]==2026.7.4",
]

[project.optional-dependencies]
desktop = [
    "flet-desktop==0.81.0",
    "tufup>=0.10",
]
dev = [
    "flet-desktop==0.81.0",
    "mypy",
    "Pillow",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "ruff",
    "tufup>=0.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.setuptools.packages.find]
include = ["core*", "gui*", "i18n*", "runtime*", "updater*", "utils*", "tools*"]

[project.scripts]
video-dl = "main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "gui", "i18n", "runtime", "updater", "utils", "tools", "sys_vars", "videodl_logger"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "dist", "venv", "\\.venv"]
disable_error_code = ["no-any-return", "var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Flet announces a removal a few versions ahead, and it was right: it said
# `padding.only()` would go in 0.83, nobody read the warning, and 0.85 broke the app
# on startup while every test stayed green. A Flet deprecation is now a red test,
# months before the version that enforces it.
filterwarnings = [
    "error::DeprecationWarning:flet.*",
    "error:.*deprecated since version.*:DeprecationWarning",
]
# The network tests are the gate an unattended dependency bump has to pass, so they
# are real: a real download, a real ffmpeg run. They are excluded by default, and
# run by the `download` CI job and the daily canary with `-m network`.
addopts = "-m 'not network'"
markers = ["network: hits the real network"]
